# python-project-template

./: .bandit.yml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  TEMPLATE_SETUP.md  pyproject.toml
.claude/commands/: test-module.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  deploy-job.yml  deploy-service.yml  security.yml
deploy/: Dockerfile
src/myproject/: __init__.py  config.py  core.py
tests/: conftest.py
tests/myproject/: test_config.py  test_core.py
